# presentaciones-cursos-talleres

./: .gitignore  .gitmodules  Justfile  LICENSE
.github/workflows/: release.yml
creador_de_qr/: generate_qr.py  generate_qr.sh  requirements.txt
presentaciones/: README.md  generate.sh  package.json
presentaciones/La_IA_no_es_solo_de_las_Big_Tech/: .release.yaml  La_IA_no_es_solo_de_las_Big_Tech-construyendo_con_IA_Open_Source  La_IA_no_es_solo_de_las_Big_Tech-construyendo_con_IA_Open_Source.md
presentaciones/boost-desarrollo-con-ia-con-opensource/: .release.yaml  boost-desarrollo-con-ia-con-opensource.md
presentaciones/de-estudiante-a-desarrollador-y-a-trabajador/: .release.yaml  de_estudiante_a_desarrollador_y_a_trabajador.md
presentaciones/desarrollando-con-ia/: .release.corta.yaml  .release.yaml  de_estudiante_a_desarrollador_y_a_trabajador.md  desarrollando_con_ia-corta.md  desarrollando_con_ia.md
scripts/: build-presentation-zip.sh  generate-slides.sh  new-presentacion.sh  new-taller.sh  release.sh  resolve-target.sh
scripts/templates/: presentacion.md  taller.md  (+1 more)
talleres/crea-tu-agente-ia/ejercicios/agente-cp/: .env.example  .gitignore  README.md  pyproject.toml
talleres/crea-tu-agente-ia/ejercicios/agente-cp/docs/: README.md  arquitectura.md  sepomex.md  xml_a_sqlite.md
talleres/crea-tu-agente-ia/ejercicios/agente-cp/scripts/: xml_a_sqlite.py
talleres/crea-tu-agente-ia/ejercicios/agente-cp/src/agente_cp/: agente_langgraph.py  cli.py  mcp_server.py
talleres/crea-tu-agente-ia/ejercicios/agente-cp/src/agente_cp/fixtures/: 29_tlaxcala.txt
(+71 files in other folders)
